--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -1,87 +1,20 @@
-#expand {
-  height: 100vh;
-  float: left;
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  border-right: 1px solid #ddd;
-  background-color: #f3f3f3;
+.profile-card,
+.publicacion {
+  padding-bottom: 24px;
 }
 
-.profile-card {
-  padding-right: 2vw;
-  width: 29%;
-  float: left;
-}
-
-#publicaciones {
-  padding-left: 2vw;
-  width: 70%;
-  float: right;
-}
-
-#publicaciones .rowx {
-  float: left;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-#publicaciones .publicacion {
-  width: calc(50% - 0.75vw);
-  margin-bottom: 20px;
-  float: left;
-  padding: 0 10px;
-}
-
-#publicaciones.reduced {
-  width: 100%;
-  padding-left: 0;
-}
-
-#publicaciones.reduced .publicacion {
-  width: calc(33.33% - 0.75vw);
-}
-
-@media (max-width: 991px) {
-  .profile-card {
-    width: 33.33%;
+@media (min-width: 992px) {
+  .publicacion:nth-child(odd) {
+    padding-right: 24px;
   }
 
-  #publicaciones {
-    width: 66.66%;
-  }
-
-  #publicaciones .publicacion {
-    width: 100%;
-  }
-
-  #publicaciones.reduced .publicacion {
-    width: calc(50% - 0.75vw);
+  .publicacion:nth-child(even) {
+    padding-left: 24px;
   }
 }
 
-@media (max-width: 767px) {
-  #expand {
-    display: none;
-  }
-
-  .profile-card {
-    width: 100%;
-    margin: 0;
-    margin-bottom: 20px;
-    padding: 0;
-  }
-
-  #publicaciones {
-    width: 100%;
-    padding: 0;
-  }
-
-  #publicaciones.reduced .publicacion {
-    width: 100%;
+@media (min-width: 768px) {
+  .publicaciones {
+    padding-left: 5vw;
   }
 }
