--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <apollo-navbar [search]="false" [dropdown]="false"></apollo-navbar>
 
 <div class="contenido">
-  <div class="align-vertical">
+  <div class="center-y">
     <div class="col-md-4 col-md-offset-1">
       <a title="Apollo es una nueva forma de viajar" class="polaroid" href="">
         <img class="img-responsive" alt="Travel plan" src="assets/img/travelplan.jpg">
