--- a/client/src/app/shared/components/view-rv/view-rv.component.css
+++ b/client/src/app/shared/components/view-rv/view-rv.component.css
@@ -1,111 +1,73 @@
-
-.modal {
-  background-color: rgba(73, 75, 76, 0.75);
-  padding: 70px;
-}
-
 .view-rv {
-  border-radius: 4px;
-  overflow: hidden;
+  display: flex;
+  align-content: space-around;
   width: 100%;
   height: 100%;
 }
 
-.background {
-  background-color: #fff;
-  height: 100%;
-  display: flex;
-  align-content: space-around;
-  flex-direction: row;
-}
-
-.rv-map {
-  display: flex;
-  align-self: center;
+.map {
   width: 70%;
   height: 100%;
   background-color: #eaeaea;
 }
 
-.rv-map .google-map {
+.map .google-map {
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   width: 100%;
   height: 100%;
-  align-self: center;
 }
 
-.rv-body {
+.body {
   width: 30%;
-  position: relative;
   overflow-y: scroll;
+  background-color: #fff;
 }
 
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin: 20px;
-}
-
-.rv-info {
+.info {
+  position: relative;
   width: 100%;
   padding: 20px;
-  float: left;
 }
 
-.rv-data {
-  float: left;
-  width: 100%;
-  position: relative;
-  margin-top: 7px;
+.metadata {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
-.rv-user {
-  float: left;
-  width: 100%;
-}
-
-.rv-user .wrapper-user-picture {
-  float: left;
+.user .avatar {
   width: 70px;
-  display: inline-block;
+  margin-right: 10px;
 }
 
-.rv-user .user-picture {
-  width: 100%;
-  padding-right: 10px;
+.user .user-info {
+  align-self: flex-start;
 }
 
-.rv-user .user-info {
-  display: inline-block;
-}
-
-.rv-user .username {
-  display: block;
-  margin-bottom: 2px;
-}
-
-.rv-user .user-info:hover {
+.user .user-info:hover {
   text-decoration: none;
 }
 
-.rv-data-right {
-  position: absolute;
-  right: 0;
-  top: 0;
+.user .username {
+  display: block;
+}
+
+.data {
+  width: 100%;
+  position: relative;
+  margin-top: 15px;
 }
 
 .actions {
-  display: inline-block;
-  float: left;
-  clear: both;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .actions button {
-  height: 35px;
   margin: 0;
-  padding: 5px;
+  padding: 0;
+  margin-left: 15px;
   border: none;
   background-color: transparent;
 }
@@ -124,27 +86,32 @@
 }
 
 .actions button .fa {
-  margin-right: 7px;
+  margin-right: 2px;
 }
 
 .line {
   width: 100%;
   margin-top: 0;
   margin-bottom: 0;
-  border : 0;
+  border: none;
   height: 1px;
   background-image: linear-gradient(to left, #d5dfe8, #8c8c8c, #d5dfe8);
 }
 
 .comments {
-  background-color: #d5dfe8;
+  background-color: #F3F8F7;
 }
 
 .new-comment {
   padding: 20px;
 }
 
-.new-comment .input-comment {
+.new-comment .form {
+  display: flex;
+  flex-direction: column;
+}
+
+.new-comment .input {
   margin-bottom: 5px;
   padding: 10px;
   font-size: 14px;
@@ -153,17 +120,13 @@
   border: 3px solid #ccc;
 }
 
-.new-comment .input-comment:focus {
+.new-comment .input:focus {
   outline: 0;
   border: 3px solid #ccc;
 }
 
-.new-comment .btn-primary {
-  float: right;
-}
-
-.list-comments {
-  clear: both;
+.new-comment button {
+  align-self: flex-end;
 }
 
 .list-comments .comment {
